Release 0.2-0 (//):
  * C lib re-organization.
  * Zero out buffer when finished.

Release 0.1-2 (5/13/2016):
  * Fix vignette title.
  * Add console notification when using tcltk (Rich FitzJohn)
  * Add tests for terminal reader.
  * Add screenshots to vignette.

Release 0.1-1 (4/25/2016):
  * Add package vignette.
  * Minor documentation tweaks.

Release 0.1-0 (2/25/2016):
  * Release to CRAN.
  * Print *'s in the terminal (not my preference, but seems popular).
  * Add tcltk method (WCC).
  * Fixes for OS X.
  * Better handling for C-c and backspace.
  * Import functionality from remoter.